refact: change link

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Skills:
 </ul>
           </div>
         <div class="footer": solid 10px;">
-          <a align="center"a href="https://www.youtube.com/watch?v=tMGtfFHMq1I">Link to video   REVIT+ENSCAPE</a>
+          <a href="https://www.youtube.com/watch?v=tMGtfFHMq1I">Link to video   REVIT+ENSCAPE</a>
         </div>
  
     
