--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
          <figure class="pfoto">
            <img src="assets/img/image.jpg" alt="my photo">
           </figure>
-          <figure class="pfoto">
-            <img src="assets/img/telegram.jpg" width="150"  alt="my photo">
-           </figure>
-           <ul>
+                     <ul class="nobull">
             <li>Ihor NAUMENKO</li> 
             <li>17ukr@ukr.net</li>
-            <li>&#9668; &#9668; &#9668; Telegram</li> 
+            <li>Telegram &#9658; &#9658; &#9658;</li> 
             <li>Residence:  Kharkiv, Ukraine </li>
-            </ul>  
+            </ul> 
+            <figure class="pfoto">
+              <img src="assets/img/telegram.jpg" width="150"  alt="my photo">
+             </figure> 
       </section>
     </div>
     </header>
