--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
     <div class="main">
     <div class="article">            
       <div class="background"> Career objective:</div>
-               <p>BIM modeller</p>
+               <p><b> BIM modeller</b></p>
                <div class="background"> Education:</div>
-               <p>Kharkiv State Technical University of Civil Engineering and Architecture</p>
+               <p><b>Kharkiv State Technical University of Civil Engineering and Architecture</b></p>
 
       <div class="background">Skills: </div>
            <ul>
-<li>	AutoCAD, REVIT, UE4
+<li>	<b>AutoCAD, REVIT, UE4</b>
 <li>	Ability to train, evaluate and successfully lead a cross-functional employee team.</li>
 <li>	Ability to manage technical projects through all phases until they are complete.</li>
 <li>	Open-mindedness and ability to work on complex projects and in a complex environment.</li>
 <li>	Great capacity to analyze and solve problems.</li>
-<<<<<<< HEAD
+
            </ul>
     </div>
    
@@ -55,7 +55,7 @@
     <div class="background"> Work experience: </div>
 <ul>
     <li>2017-present – distance work in REVIT
-      <ul>
+      <ul class="nobull">
         Responsible for: </li>
         <li> developing designs;</li>
         <li>ensuring the quality of design documentation throughout the design process;</li>
@@ -115,11 +115,11 @@
   <div class="footer2";>
     <div class="footer";>
       <div><a href="https://rs.school/js/">
-      <img src="https://rs.school/images/rs_school_js.svg" width="75"></a></div>
+      <img src="https://rs.school/images/rs_school_js.svg" width="70"></a></div>
       <div><a href="hhttps://github.com/IgorCD22">
-        <img src="assets/img/git.png" width="75"></a></div>
+        <img src="assets/img/git.png" width="30"></a></div>
         <div><a href="https://www.youtube.com/watch?v=tMGtfFHMq1I">
-          <img src="assets/img/youtube.jpg" width="75"></a></div>
+          <img src="assets/img/youtube.jpg" width="30"></a></div>
           <p>2022</p>
     </div>
     </div>
