--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <div class="footer";>
       <div><a href="https://rs.school/js/">
       <img src="https://rs.school/images/rs_school_js.svg" width="70"></a></div>
-      <div><a href="hhttps://github.com/IgorCD22">
+      <div><a href="https://github.com/IgorCD22">
         <img src="assets/img/git.png" width="30"></a></div>
         <div><a href="https://www.youtube.com/watch?v=tMGtfFHMq1I">
           <img src="assets/img/youtube.jpg" width="30"></a></div>
